# cloudflare-python-workers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  fastapi.yml
demos/03-fastapi/src/: worker.py
fastapi/: .gitignore  README.md  db_init.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  wrangler.jsonc
fastapi-llm/: AGENTS.md  README.md  pyproject.toml
fastapi-llm/app/common/: db.py
fastapi-llm/app/routers/: utils.py
fastapi-llm/app/service/: Global.py
fastapi-orm/: README.md  database.db  main.py  pyproject.toml
fastapi-orm/app/: app.py
fastapi-orm/app/common/: constants.py  db.py  helpers.py
fastapi/.github/workflows/: deploy.yml
fastapi/assets/: info.data
fastapi/src/: app.py  server.py  worker.py
fastapi/src/assets/: info.data
fastapi/src/common/: crypto.py  helpers.py
fastapi/src/routers/: dev.py  personal.py  utils.py  youtube.py
fastapi/src/service/: Global.py
fastapi/src/tools/: get_token.py  get_video_transcript.py
workers/: AGENTS.md  api.py  config.py  db_setup.sql  models.py  openapi.json  pyproject.toml  swagger.json  test_worker.py  utils_worker.py  worker-whisper.py  worker.py
workers1/: api.py  pyproject.toml  worker-indextts.py  worker-voxcpm.py
