[project]
name = "fastapi-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "markupsafe",
    "python-multipart",
    "httpx",
    "pyjwt",
    "sqlmodel",
    "pwdlib[argon2]",
    "mysql-connector-python>=9.5.0",
]
