[project]
name = "workers-python"
version = "0.1.0"
description = "Cloudflare Workers Python Task Runner"
dependencies = [
    "redis",
    "mysql-connector-python",
    "fastapi",
    "uvicorn",
    "requests",
    "psutil"
]

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"