[project]
name = "workers-python"
version = "0.1.0"
description = "Cloudflare Workers Python Task Runner"
dependencies = [
    "redis",
    "mysql-connector-python",
    "fastapi",
    "uvicorn",
    "requests",
    "psutil"
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"