[project]
name = "workers-python"
version = "0.1.0"
description = "Cloudflare Workers Python Task Runner"
dependencies = [
    "redis",
    "mysql-connector-python",
    "fastapi",
    "uvicorn",
    "requests",
    "psutil",
    "python-multipart>=0.0.21",
]

readme = "README.md"
requires-python = ">=3.12"
